crates/sequence/tests/it/snapshots/it__signatures__0.snap
---
source: crates/sequence/tests/it/signatures.rs
expression: recovered.tree
---
SignerNode {
    signer: Some(
        Signer {
            weight: Some(
                1,
            ),
            leaf: ECDSASignature(
                ECDSASignatureLeaf {
                    address: 0x6b4d638bdcf59093dd633ef59c762a417b981beb,
                    signature_type: ECDSASignatureTypeEthSign,
                    signature: 0x9fa7b7e8ed25088c413074818ac10ab3bbcddb120bbec85083f3ba254e5547d953fe615a6474fd365326244dedd7afa3911ad39c956ca096d721064d6b29055d1b,
                },
            ),
        },
    ),
    left: None,
    right: None,
}
