crates/sequence/tests/it/snapshots/it__signatures__3.snap
---
source: crates/sequence/tests/it/signatures.rs
expression: config.clone().tree
---
SignerNode {
    signer: Some(
        Signer {
            weight: Some(
                4,
            ),
            leaf: NestedSignature(
                NestedLeaf {
                    internal_threshold: 2,
                    external_weight: 4,
                    internal_root: 0x4eb12975cb2269ea1f8d44aee55fdc110e56ad15a3265b4c25de3cef4fd9645b,
                    size: 195,
                },
            ),
        },
    ),
    left: Some(
        SignerNode {
            signer: Some(
                Signer {
                    weight: None,
                    leaf: NodeSignature(
                        NodeLeaf {
                            hash: 0xf6dc189f16bb65c588ccd5c63aa805bcbeb6e90dd8a049cfba0936050f299087,
                        },
                    ),
                },
            ),
            left: None,
            right: None,
        },
    ),
    right: Some(
        SignerNode {
            signer: None,
            left: Some(
                SignerNode {
                    signer: Some(
                        Signer {
                            weight: Some(
                                2,
                            ),
                            leaf: BranchSignature(
                                BranchLeaf {
                                    size: 136,
                                },
                            ),
                        },
                    ),
                    left: Some(
                        SignerNode {
                            signer: Some(
                                Signer {
                                    weight: None,
                                    leaf: NodeSignature(
                                        NodeLeaf {
                                            hash: 0x7c989a96925302993812c1ec3924bce3ba2ca0e8f7e3655e30f5b24d965aa18b,
                                        },
                                    ),
                                },
                            ),
                            left: None,
                            right: None,
                        },
                    ),
                    right: Some(
                        SignerNode {
                            signer: None,
                            left: Some(
                                SignerNode {
                                    signer: Some(
                                        Signer {
                                            weight: Some(
                                                1,
                                            ),
                                            leaf: ECDSASignature(
                                                ECDSASignatureLeaf {
                                                    address: 0x7ac88b6712dbcd7c94339d0ccd79a8527870447a,
                                                    signature_type: ECDSASignatureTypeEthSign,
                                                    signature: 0xa73ce16a9cc7075c18bd2b4fd2649812fecb51460353a55bf62f821bf884443a169e0d0e04113d7ef2c2d15f1ecf46531f291259542065c556f0e721a82b3c581b,
                                                },
                                            ),
                                        },
                                    ),
                                    left: None,
                                    right: None,
                                },
                            ),
                            right: Some(
                                SignerNode {
                                    signer: Some(
                                        Signer {
                                            weight: Some(
                                                1,
                                            ),
                                            leaf: ECDSASignature(
                                                ECDSASignatureLeaf {
                                                    address: 0x739ca34b6bdcae45cc8565d405f9b00735b4467c,
                                                    signature_type: ECDSASignatureTypeEthSign,
                                                    signature: 0x93f1f388009f68763df43632153155960ea6604723bb517e90788822ff21e38722be4387e8f67c0db677b74d9a0c2a804183e6a3eebd2ba53dbfc54432f1a10f1b,
                                                },
                                            ),
                                        },
                                    ),
                                    left: None,
                                    right: None,
                                },
                            ),
                        },
                    ),
                },
            ),
            right: Some(
                SignerNode {
                    signer: Some(
                        Signer {
                            weight: Some(
                                1,
                            ),
                            leaf: AddressSignature(
                                AddressSignatureLeaf {
                                    address: 0x907c144d2490f49838c6499507ee5914f4a22b5b,
                                },
                            ),
                        },
                    ),
                    left: None,
                    right: None,
                },
            ),
        },
    ),
}
